Second commit for iteration/1-core-infrastructure/gamestore-refactor Refactor: Rebuild the data loading and saving system and integrate into the components Chore: Changing the component files to work with the system. Chore: Endless bugs and errors resulting  from having to rewrite almost everything
Notes: Integrating required a lot of code rewriting, there are still bugs with the interface and data not saving but it is stable for the most part.
I understand the inital repo is not done by a professional, there is a lot wrong with this design that has made this very very  difficult but I choose the challenge.
In the condition I found it there was no way this app could be updated as the game progressed without serious work.

Commit changes
- Updated all components in src to work with the new GameStore
- Tested to ensure user interface loads and functions as normal
- Fixed bugs, found many to fix still.

Issue References:
Convert productionPlans to use GameStore [[[#80](https://github.com/fustahson-lab/dopeonomics/issues/80)]](https://github.com/Anymuz/dopeonomics/issues/80)
Refactor SupplyManagementTab to use useGameStore [[[#81](https://github.com/fustahson-lab/dopeonomics/issues/81)]](https://github.com/Anymuz/dopeonomics/issues/81)

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -3,10 +3,10 @@
  /* You might add styles here that are SPECIFIC to the App component's layout, */
  /* but with Tailwind, this is often handled with classes directly in App.js */
  
- .app-container {
+ /*.app-container {
   /* Example: If you had a specific layout need for the main app container */
   /* display: flex; */
   /* justify-content: center; */
   /* align-items: center; */
   /* height: 100vh; */
- }
+/* }
